Curve parent crash when rendering animation #38745

Closed
opened 2014-02-21 19:24:11 +01:00 by Pam Hampton · 10 comments

Here's the crash report:
crash_log.txt

LoriVDay.blend

Here's the crash report: [crash_log.txt](https://archive.blender.org/developer/F78332/crash_log.txt) [LoriVDay.blend](https://archive.blender.org/developer/F78327/LoriVDay.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @PamelaHampton

Added subscriber: @PamelaHampton

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Please attach these huge crash logs as separate file.

Also what do you mean by "won't animate"? Some more information would be nice...

Please attach these huge crash logs as separate file. Also what do you mean by "won't animate"? Some more information would be nice...
Brecht Van Lommel changed title from One blend file that won't animate using QT. Worked in 2.59, but not in 2.6 or 2.7. to Curve parent crash when rendering animation 2014-02-24 16:31:19 +01:00
Sergey Sharybin was assigned by Brecht Van Lommel 2014-02-24 16:31:19 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

I can confirm the crash, just pressing render animation. It's a thread race condition so it might not happen always but it crashes pretty quickly here.

What is happening is that there are multiple objects with the same curve parent, and they are all finding par->curve_cache->path NULL and trying to create it with BKE_displist_make_curveTypes at the same time, which gives crashes.

I can confirm the crash, just pressing render animation. It's a thread race condition so it might not happen always but it crashes pretty quickly here. What is happening is that there are multiple objects with the same curve parent, and they are all finding par->curve_cache->path NULL and trying to create it with BKE_displist_make_curveTypes at the same time, which gives crashes.

This issue was referenced by blender/blender-addons-contrib@d9637fb3be

This issue was referenced by blender/blender-addons-contrib@d9637fb3beb595c3e6387f79da500987cdea411e

This issue was referenced by d9637fb3be

This issue was referenced by d9637fb3beb595c3e6387f79da500987cdea411e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d9637fb3be.

Closed by commit d9637fb3be.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38745
No description provided.